[package]
name = "link"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]

[dependencies]
capnp = "0.21.0"
wee_alloc = "0.4.5"

[build-dependencies]
capnpc = "0.21.0"

# Below settings dramatically reduce wasm output size
# See https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-sizewasm-opt -Oz -o
# See https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[target.wasm32-unknown-unknown]
# This is the default target for wasm32
