[package]
name = "link"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]

[dependencies]
hubble = { path = "../../sdk" }
whatlang = "0.16.4"

[target.wasm32-unknown-unknown]
# This is the default target for wasm32
