[package]
name = "pdf"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]

[dependencies]
getrandom = "0.3"
hubble = "0.1.2"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="custom"']
# This is the default target for wasm32
